# Kemono-Search

./: .gitignore  CMakeLists.txt  KemonoSearch  README.md  entryTypes.h  globalVariables.cpp  globalVariables.h  gui.cpp  gui.h  jsonExporter.cpp  jsonExporter.h  main.cpp  makefile  output.txt  parser.cpp  parser.h  stringFuncs.cpp  stringFuncs.h  user.json  userFunctions.cpp  userFunctions.h  users.txt
.cache/clangd/index/: animation.cpp.D28C372DF46DF13C.idx  animation.hpp.7310E61EE2D1FD2F.idx  automerge.cpp.A0A1B2549386F4AE.idx  autoreset.hpp.AAF5647CCEC827C3.idx  blink.cpp.9485D9DA9A2A8186.idx  bold.cpp.924A6DEC64262567.idx  border.cpp.F8F02B0D31CE72E1.idx  box.cpp.4D2F5500CCC7A18F.idx  box.hpp.7230EC55BBB50E0F.idx  box_helper.cpp.7F561474093CC70B.idx  box_helper.hpp.6CC28D0E1EC02095.idx  button.cpp.1C6D8319B65B3B14.idx  canvas.cpp.D70063542ABBCDD5.idx  canvas.hpp.AB4CDFB335F1B6B4.idx  captured_mouse.hpp.38931D68B955F5C4.idx  catch_event.cpp.B65BECB4AFBACAED.idx  checkbox.cpp.E2D3BCC041DA25C9.idx  clear_under.cpp.C213E3C23840B5BC.idx  collapsible.cpp.E1C9D90D13A7FAA2.idx  color.cpp.CD4CC542F1880B0D.idx  color.cpp.FFC0AD78B60BFBE7.idx  color.hpp.0112358AD79406E3.idx  color_info.cpp.B0648B22626AD709.idx  color_info.hpp.BF8ED16A7851CA75.idx  component.cpp.35DE4FC42B1D145E.idx  component.hpp.98951B4BB01D14BE.idx  component_base.hpp.12685D149D57D67E.idx  component_options.cpp.81730F513989FCB4.idx  component_options.hpp.B7B4F19901A8678A.idx  composite_decorator.cpp.0EE59DD069CF8117.idx  container.cpp.8A9152F17D2B6045.idx  dbox.cpp.1878146990A1CD4E.idx  deprecated.hpp.13C8A4C102447BD5.idx  deprecated.hpp.20864C9681F21B5C.idx  dim.cpp.BD534E2185C289AE.idx  direction.hpp.AEA72BDEBCB500DF.idx  dropdown.cpp.713154DA09F2F99F.idx  (+82 more)
.github/workflows/: c-cpp.yml  codeql.yml
tools/: index.css  index.html
